[package]
name = "conduit-mime-types"
version = "0.8.0"
authors = ["wycats@gmail.com"]
license = "MIT"
description = "MIME type definitions for conduit"
repository = "https://github.com/conduit-rust/mime-types"
edition = "2018"

[build-dependencies]
phf_codegen = "0.10.0"
rand = "0.8.5"
rand_chacha = "0.3.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
xxh3 = "0.1.1"

[dependencies]
phf = "0.10.0"
xxh3 = "0.1.1"

[profile.dev]
opt-level = 3
