[package]
name = "f"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "one"
path = "src/one.rs"

[[bin]]
name = "two"
path = "src/two.rs"

[dependencies]
hexdump = "0.1.1"
rand = "0.8.5"
rand_chacha = "0.3.1"
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.82"
xxh3 = "0.1.1"

[profile.release]
debug = true
lto = "fat"
